--- a/src/App.css
+++ b/src/App.css
@@ -250,7 +250,7 @@ header h1 {
     left: 0;
     width: 100%;
     height: 100vh;
-    background: url(./assets/wordgame.webp) center/cover no-repeat;
+    background: url(./assets-WordWrap/wordgame.webp) center/cover no-repeat;
     background-position: center;
     /* background-size: 150%; */
     opacity: 0.5; /* Adjust opacity here */
@@ -316,6 +316,12 @@ header h1 {
   }
   .main::before {
     height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: url(./assets-WordWrap/wordgame.webp) center/cover no-repeat;
   }
 
   .header h1 {
@@ -395,6 +401,15 @@ header h1 {
     height: 100vh;
     margin: 0;
     overflow: hidden;
+  }
+  .main::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: url(./assets-WordWrap/wordgame.webp) center/cover no-repeat;
   }
 
   .main header {
